# AITradeCoach

./: .env.example  .gitignore  README.md  aitradecoach_mvp_cleanup.patch  pyproject.toml
config/: settings.example.yaml
config/prompts/: README.md  cognition_evaluation.v1.md  cognition_extraction.v1.md  evidence_planning.v1.md  log_understanding.md  log_understanding.v1.md  log_understanding.v2.md  log_understanding.v3.md  log_understanding.v4.md  log_understanding.v5.md  manifest.json  report_generation.md  report_generation.v1.md  report_generation.v2.md  report_generation.v3.md  report_generation.v4.md  report_judging.v1.md  report_judging.v2.md  research_agent.md  research_agent.v1.md  research_agent.v2.md  research_agent.v3.md  research_agent.v4.md  research_plan.md  research_synthesis.v1.md  self_improvement.v1.md  window_selection.v1.md
data/: README.md
data/user_logs/: README.md  UserSummary_260213.md  UserSummary_260216.md  UserSummary_260217.md  UserSummary_260218.md  UserSummary_260220.md  UserSummary_260224.md  UserSummary_260225.md  UserSummary_260226.md  UserSummary_260227.md  UserSummary_260302.md  UserSummary_260303.md  UserSummary_260304.md  UserSummary_260305.md  UserSummary_260306.md
docs/: architecture.md  data_contracts.md  promptops_design.md  report_generation.md  task_flow.md  testing_strategy.md  user_log_format.md  window_selector_design.md
examples/evidence/: evidence_packet_sample.json
examples/logs/: daily_log_sample.md
scripts/: debug_langgraph_nodes.py  debug_run_manual.py  test_openai_health.py  test_single_nodes.py
(+153 files in other folders)
