[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-cognitive-coach"
version = "0.1.0"
description = "Long-term trading cognition coaching agent system"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AITradeCoach" }]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "mcp>=1.0.0",
  "langchain>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "chromadb>=0.5.5",
  "tenacity>=8.4.2",
  "structlog>=24.1.0",
  "typer>=0.12.3",
  "orjson>=3.10.7",
  "python-dateutil>=2.9.0.post0",
  "beautifulsoup4>=4.12.3",
  "Markdown>=3.7",
  "langchain-core>=0.3.0",
  "playwright>=1.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
